--- a/index.html
+++ b/index.html
@@ -10,6 +10,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="bg-surface-color">
+        <nav class="container">
+            <a href="#" id="logo">
+                <img src="assets/Logo.svg" alt="Logomarca">
+            </a>
+            <ul id="primary-menu">
+                <li>
+                    <a href="#">
+                        <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de lupa">
+                    </a>
+                </li>
+              <li><a href="#">Explorar</a></li>
+              <li><a href="#">Minhas viagens</a></li>
+              <li>
+                <a href="#">
+                    <img src="assets/image/Profile pic.png" alt="Imagem de pefil do usuário">
+                </a>
+            </li>
+            </ul>
+        </nav>
+        <header>
+            <div class="container">
+                <div id="profile">
+                    <img src="assets/image/Profile pic.png" alt="Imagem de pefil do usuário">
+                    <div>
+                        <h1>Carina do Santos</h1>
+                        <p>Amante de viagens, cultura e gastronomia. 🌍✈️  <br>
+                            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+                        </p>
+                    </div>
+                </div>
+                <ul id="info">
+                    <li>
+                        <img src="assets/icons/MapPin.svg" alt="ícone de localização de mapa">
+                        <span>São Paulo, Brasil</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/AirplaneTilt.svg" alt="ícone de avião">
+                        <span>37 países</span>
+                    </li>
+                    <li>
+                        <img src="assets/icons/Image.svg" alt="ícone de imagem de galeria">
+                        <span>240 fotos</span>
+                    </li>
+                </ul>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
