--- a/index.html
+++ b/index.html
@@ -58,5 +58,24 @@
             </div>
         </header>
     </div>
+    <main class="container">
+        <img src="assets/image/Image 01.png" alt="...">
+        <img src="assets/image/Image 02.png" alt="...">
+        <img src="assets/image/Image 03.png" alt="...">
+        <img src="assets/image/Image 04.png" alt="...">
+        <img src="assets/image/Image 05.png" alt="...">
+        <img src="assets/image/Image 06.png" alt="...">
+        <img src="assets/image/Image 07.png" alt="...">
+        <img src="assets/image/Image 08.png" alt="...">
+        <img src="assets/image/Image 09.png" alt="...">
+        <img src="assets/image/Image 10.png" alt="...">
+        <img src="assets/image/Image 11.png" alt="...">
+        <img src="assets/image/Image 12.png" alt="...">
+    </main>
+    <footer class="container">
+        <span>Travelgram &copy; 2024</span>
+        <span>Termos de uso</span>
+        <span>Política de privacidade</span>
+    </footer>
 </body>
 </html>
